--- a/app/ui/dashboard/sidebar/sidebar.module.css
+++ b/app/ui/dashboard/sidebar/sidebar.module.css
@@ -1,3 +1,43 @@
-.container{
-  
+.container {
+  position: sticky;
+  left: 0;
+  top: 40px;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+
+}
+
+.userImage {
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.userDetail {
+  display: flex;
+  flex-direction: column;
+}
+
+.userName {
+  font-weight: 500;
+}
+
+.userTitle {
+  font-size: 12px;
+  color: var(--textSoft);
+}
+
+.list {
+  list-style: none;
+}
+
+.cat {
+  color: var(--textSoft);
+  font-weight: 600;
+  font-style: 13px;
+  margin: 10px 0px;
 }
