--- a/app/ui/dashboard/sidebar/sidebar.module.css
+++ b/app/ui/dashboard/sidebar/sidebar.module.css
@@ -26,7 +26,7 @@
   font-weight: 500;
 }
 
-.userTitle {
+.userRole {
   font-size: 12px;
   color: var(--textSoft);
 }
@@ -40,4 +40,22 @@
   font-weight: 600;
   font-style: 13px;
   margin: 10px 0px;
+}
+
+.logout {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  margin: 5px 0px;
+  gap: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  background: none;
+  border: none;
+  color: var(--text);
+  width: 100%;
+}
+
+.logout:hover {
+  background-color: var(--bg);
 }
