--- a/app/ui/dashboard/transactions/transactions.module.css
+++ b/app/ui/dashboard/transactions/transactions.module.css
@@ -1,1 +1,50 @@
-.container{}
+.container {
+  background-color: var(--bgSoft);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.title {
+  margin-bottom: 20px;
+  font-weight: 300;
+  color: var(--textSoft);
+}
+
+.table {
+  width: 100%;
+}
+
+.table td {
+  padding: 10px;
+}
+
+.user {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.userImage {
+  object-fit: cover;
+  border-radius: 50%;
+  border: 1px solid #fff;
+}
+
+.status {
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 14px;
+  color: #fff;
+}
+
+.pending {
+  background-color: #29ADB2;
+}
+
+.cancelled {
+  background-color: #BE3144;
+}
+
+.done {
+  background-color: #72e45e;
+}
