--- a/app/ui/dashboard/chart/chart.module.css
+++ b/app/ui/dashboard/chart/chart.module.css
@@ -1,1 +1,12 @@
-.container{}
+.container {
+  height: 450px;
+  background-color: var(--bgSoft);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.title {
+  font-weight: 300;
+  margin-bottom: 20px;
+  color: var(--textSoft);
+}
