--- a/app/ui/dashboard/rightbar/rightbar.module.css
+++ b/app/ui/dashboard/rightbar/rightbar.module.css
@@ -1,1 +1,60 @@
-.container{}
+.container {
+  position: fixed;
+}
+
+.item {
+  position: relative;
+  background-color: var(--bgSoft);
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.bgContainer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 50%;
+  height: 50%;
+}
+
+.img {
+  object-fit: contain;
+  opacity: 0.4;
+}
+
+.texts {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.notification {
+  font-weight: bold;
+}
+
+.title {
+  font-weight: 500;
+  font-size: 12px;
+  color: var(--textSoft);
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  width: max-content;
+  padding: 10px;
+  font-size: 13px;
+  background-color: #D2DE32;
+  border-radius: 5px;
+  border: none;
+
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
